--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,1 +1,108 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap');
+h1 {
+    color: $text-color;
+    font-size: 84px;
+    font-weight: 300;
+}
+
+h2 {
+    color: $text-color;
+    font-size: 67px;
+    font-weight: 300;
+}
+
+h3 {
+    color: $text-color;
+    font-size: 54px;
+    font-weight: 400;
+}
+
+h5 {
+    color: $text-color;
+    font-size: 34px;
+    font-weight: 600;
+}
+
+.false-h5 {
+    color: $text-color;
+    font-size: 34px;
+    font-weight: 600;
+}
+
+h6 {
+    color: $text-color;
+    font-size: 28;
+    font-weight: 700;
+}
+
+h1 {
+    color: $text-color;
+    font-size: 84px;
+    font-weight: 300;
+}
+
+h2 {
+    color: $text-color;
+    font-size: 67px;
+    font-weight: 300;
+}
+
+h3 {
+    color: $text-color;
+    font-size: 54px;
+    font-weight: 400;
+}
+
+h5 {
+    color: $text-color;
+    font-size: 34px;
+    font-weight: 600;
+}
+
+.false-h5 {
+    color: $text-color;
+    font-size: 34px;
+    font-weight: 600;
+}
+
+h6 {
+    color: $text-color;
+    font-size: 28;
+    font-weight: 700;
+}
+
+.subtitle1 {
+    color: $text-color;
+    font-size: 22px;
+    font-weight: 600;
+}
+
+.body1 {
+    color: $text-color-alternative;
+    font-size: 22px;
+    font-weight: 400;
+}
+
+.subtitle2 {
+    color: $text-color;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.button {
+    color: $text-color;
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.caption {
+    color: $text-color;
+    font-size: 14px;
+    font-weight: 400;
+}
+
+.overline {
+    color: $text-color;
+    font-size: 11px;
+    font-weight: 400;
+}
