--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,4 @@
 @import "_global-variables";
 @import "_fonts";
 @import "_tags";
-@import "./elements/container.scss";
-@import "./elements/cta-1.scss";
-@import "./elements/cta-2.scss";
+@import "./elements/main.scss";
