--- a/scss/elements/_container.scss
+++ b/scss/elements/_container.scss
@@ -3,7 +3,7 @@
     height: auto;
     margin-left: auto;
     margin-right: auto;
-    max-width: calc(100vw -10%);
+    max-width: calc(100vw - 10%);
     position: static;
     width: auto;
 }
