--- a/scss/elements/_cta-1.scss
+++ b/scss/elements/_cta-1.scss
@@ -6,4 +6,31 @@
     display: inline-block;
     padding: 10px 25px 10px 25px;
     text-align: center;
+    &:hover {
+        -webkit-animation: shadow-drop-center 0.4s ease-in-out both;
+        animation: shadow-drop-center 0.4s ease-in-out both;
+    }
+}
+
+// Animation
+@-webkit-keyframes shadow-drop-center {
+    0% {
+        -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+    100% {
+        -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+    }
+}
+
+@keyframes shadow-drop-center {
+    0% {
+        -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+        box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    }
+    100% {
+        -webkit-box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+        box-shadow: 0 0 20px 0px rgba(0, 0, 0, 0.35);
+    }
 }
