--- a/scss/elements/_cta-2.scss
+++ b/scss/elements/_cta-2.scss
@@ -7,4 +7,31 @@
     display: inline-block;
     padding: 10px 25px 10px 25px;
     text-align: center;
+    &:hover {
+        background-color: $text-color;
+        color: $bg-color;
+        transition: background-color 0.5s;
+        transition: color 0.5s;
+        -webkit-animation: shadow-drop-center 0.4s ease-in-out both;
+        animation: shadow-drop-center 0.4s ease-in-out both;
+    }
+}
+
+// Animation
+@-webkit-keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
+
+@keyframes fade-in {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
