--- a/scss/_tags.scss
+++ b/scss/_tags.scss
@@ -13,6 +13,10 @@ ul {
 
 a {
     color: $text-color-alternative;
+    &:hover {
+        color: $text-color;
+        transition: color 0.5s;
+    }
 }
 
 input {
