--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,4 +2,5 @@
 @import "_global-variables";
 @import "_fonts";
 @import "_tags";
-@import "./elements/main.scss";
+@import "./elements/main";
+@import "./pages/main";
