--- a/css/style.css
+++ b/css/style.css
@@ -98,66 +98,66 @@ h6 {
 @media screen and (max-width: 767px) {
   /* Font system */
   h1 {
-    color: var(--text-color);
+    color: #f8f8df;
     font-size: 32px;
     font-weight: 300;
     margin: 15px 0 40px 0; }
   h2 {
-    color: var(--text-color);
+    color: #f8f8df;
     font-size: 29px;
     font-weight: 300;
     margin: 15px 0 40px 0; }
   h3 {
-    color: var(--text-color);
+    color: #f8f8df;
     font-size: 26px;
     font-weight: 400;
     margin: 15px 0 40px 0; }
   h4 {
-    color: var(--text-color);
+    color: #f8f8df;
     font-size: 23px;
     font-weight: 400;
     margin: 15px 0 40px 0; }
   h5 {
-    color: var(--text-color);
+    color: #f8f8df;
     font-size: 20px;
     font-weight: 600;
     margin: 15px 0 40px 0; }
   .false-h5 {
-    color: var(--text-color);
+    color: #f8f8df;
     font-size: 20px;
     font-weight: 600;
     margin: 15px 0 40px 0; }
   h6 {
-    color: var(--text-color);
+    color: #f8f8df;
     font-size: 18px;
     font-weight: 700;
     margin: 15px 0 40px 0; }
   .subtitle1 {
-    color: var(--text-color);
+    color: #f8f8df;
     font-size: 16px;
     font-weight: 600; }
   .body1 {
-    color: var(--text-color-alternative);
+    color: #918e7e;
     font-size: 16px;
     font-weight: 400; }
   .subtitle2 {
-    color: var(--text-color);
+    color: #f8f8df;
     font-size: 14px;
     font-weight: 600; }
   .body2 {
-    color: var(--text-color-alternative);
+    color: #918e7e;
     font-size: 14px;
     font-weight: 400; }
   .button {
-    color: var(--text-color);
+    color: #f8f8df;
     font-size: 14px;
     font-weight: 600; }
   .caption {
-    color: var(--text-color);
+    color: #f8f8df;
     font-size: 13px;
     font-weight: 400; }
   .overline {
-    color: var(--text-color);
+    color: #f8f8df;
     font-size: 11px;
     font-weight: 400; } }
 
@@ -310,3 +310,45 @@ nav {
       max-height: 100%;
       max-width: 100%;
       object-fit: cover; }
+
+@media screen and (max-width: 991px) {
+  .section-hero {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    min-height: 100vh;
+    padding: 5% 0 5% 0; }
+    .section-hero .hero-content_wrapper {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; }
+      .section-hero .hero-content_wrapper .hero-text_wrapper {
+        display: flex;
+        flex-direction: column;
+        order: 2; }
+        .section-hero .hero-content_wrapper .hero-text_wrapper .hero-h1 {
+          margin-bottom: 30px;
+          max-width: 15ch; }
+        .section-hero .hero-content_wrapper .hero-text_wrapper .hero-p {
+          margin-bottom: 50px;
+          max-width: 34ch; }
+        .section-hero .hero-content_wrapper .hero-text_wrapper .hero-buttons_wrapper {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          width: 300px; }
+      .section-hero .hero-content_wrapper .hero-img {
+        display: none;
+        height: 100%;
+        width: 100%; }
+      .section-hero .hero-content_wrapper .hero-img_mobile {
+        clip-path: circle();
+        display: relative;
+        display: block;
+        height: 100%;
+        margin: 0 0 5% 0;
+        object-fit: cover;
+        width: 100%; } }
