--- a/css/style.css
+++ b/css/style.css
@@ -208,6 +208,29 @@ nav {
       nav .nav-content_wrapper .nav-link_wrapper .nav-link + .nav-link {
         margin-left: 27px; }
 
+@media screen and (max-width: 767px) {
+  nav {
+    border-bottom: solid 1px #524c44; }
+    nav .nav-content_wrapper {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 15px 30px 15px 30px; }
+      nav .nav-content_wrapper .logo {
+        display: inline-block;
+        height: 40px;
+        width: auto; }
+      nav .nav-content_wrapper .nav-link_wrapper {
+        display: flex;
+        flex-direction: column;
+        margin: 30px 0 30px 0; }
+        nav .nav-content_wrapper .nav-link_wrapper .nav-link {
+          display: block; }
+        nav .nav-content_wrapper .nav-link_wrapper .nav-link + .nav-link {
+          margin-left: 0px;
+          margin-top: 15px; } }
+
 .container {
   flex-grow: 1;
   height: auto;
@@ -365,6 +388,49 @@ nav {
         object-fit: cover;
         width: 100%; } }
 
+@media screen and (max-width: 767px) {
+  .section-hero {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    min-height: 70vh;
+    padding: 15% 0 15% 0; }
+    .section-hero .hero-content_wrapper {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between; }
+      .section-hero .hero-content_wrapper .hero-text_wrapper {
+        display: flex;
+        flex-direction: column;
+        order: 2; }
+        .section-hero .hero-content_wrapper .hero-text_wrapper .hero-h1 {
+          margin-bottom: 30px;
+          max-width: 15ch;
+          text-align: center; }
+        .section-hero .hero-content_wrapper .hero-text_wrapper .hero-p {
+          margin-bottom: 50px;
+          max-width: 34ch; }
+        .section-hero .hero-content_wrapper .hero-text_wrapper .hero-buttons_wrapper {
+          display: flex;
+          flex-direction: row;
+          justify-content: space-between;
+          width: 260px; }
+      .section-hero .hero-content_wrapper .hero-img {
+        display: none;
+        height: 100%;
+        width: 100%; }
+      .section-hero .hero-content_wrapper .hero-img_mobile {
+        clip-path: circle();
+        display: relative;
+        display: block;
+        height: 100%;
+        margin: 0 0 5% 0;
+        object-fit: cover;
+        width: 100%; } }
+
 .section-services {
   align-items: center;
   display: flex;
@@ -395,3 +461,113 @@ nav {
           object-fit: cover;
           overflow: hidden;
           width: 285px; }
+
+@media screen and (max-width: 991px) {
+  .section-services {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    min-height: 100vh;
+    padding: 5% 0 5% 0; }
+    .section-services .services-content_wrapper {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center; }
+      .section-services .services-content_wrapper .services-h2 {
+        margin-bottom: 80px;
+        max-width: 27ch;
+        text-align: center; }
+      .section-services .services-content_wrapper .services-cards_wrapper {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%; }
+        .section-services .services-content_wrapper .services-cards_wrapper .services-card_item {
+          align-items: center;
+          display: flex;
+          flex-direction: column; }
+        .section-services .services-content_wrapper .services-cards_wrapper .services-img {
+          border-radius: 50px;
+          height: 318px;
+          object-fit: cover;
+          overflow: hidden;
+          width: 285px; } }
+
+@media screen and (max-width: 767px) {
+  .section-services {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    min-height: 100vh;
+    padding: 5% 0 5% 0; }
+    .section-services .services-content_wrapper {
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center; }
+      .section-services .services-content_wrapper .services-h2 {
+        margin-bottom: 80px;
+        max-width: 27ch;
+        text-align: center; }
+      .section-services .services-content_wrapper .services-cards_wrapper {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%; }
+        .section-services .services-content_wrapper .services-cards_wrapper .services-card_item {
+          align-items: center;
+          display: flex;
+          flex-direction: column; }
+          .section-services .services-content_wrapper .services-cards_wrapper .services-card_item .services-img {
+            border-radius: 50px;
+            height: 318px;
+            object-fit: cover;
+            overflow: hidden;
+            width: 285px; } }
+
+.section-review {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  min-height: 100vh; }
+  .section-review .review-content_wrapper {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+    .section-review .review-content_wrapper .review-h2 {
+      margin-bottom: 100px;
+      text-align: center; }
+    .section-review .review-content_wrapper .review-card_wrapper {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center; }
+      .section-review .review-content_wrapper .review-card_wrapper .review-card_item {
+        align-items: stretch;
+        background-color: #524c44;
+        border-radius: 40px;
+        display: flex;
+        flex-direction: column;
+        height: 200px;
+        margin: 20px;
+        padding: 20px;
+        width: 285px; }
+        .section-review .review-content_wrapper .review-card_wrapper .review-card_item .review-text {
+          width: 25ch; }
+        .section-review .review-content_wrapper .review-card_wrapper .review-card_item .review-person_wrapper {
+          align-items: center;
+          display: flex;
+          flex-direction: row;
+          margin-top: auto; }
+          .section-review .review-content_wrapper .review-card_wrapper .review-card_item .review-person_wrapper .review-img {
+            clip-path: circle();
+            height: 38px;
+            margin: 0 15px 0 0;
+            object-fit: cover;
+            width: 38px; }
