añadido body2 faltante

--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,11 @@ h6 {
   font-size: 18px;
   font-weight: 400; }
 
+.body2 {
+  color: #918e7e;
+  font-size: 18px;
+  font-weight: 400; }
+
 .button {
   color: #f8f8df;
   font-size: 18px;
