--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -89,6 +89,12 @@
         font-weight: 400;
     }
     
+    .body2 {
+        color: $text-color-alternative;
+        font-size: 18px;
+        font-weight: 400;
+    }
+    
     .button {
         color: $text-color;
         font-size: 18px;
