--- a/scss/pages/main.scss
+++ b/scss/pages/main.scss
@@ -1,3 +1,5 @@
 @import "./index/hero";
 @import "./index/services";
 @import "./index/review";
+@import "./mision/start-mision";
+@import "./mision/end-mision";
