--- a/css/style.css
+++ b/css/style.css
@@ -778,3 +778,33 @@ nav {
               margin: 0 15px 0 0;
               object-fit: cover;
               width: 38px; } }
+
+.section-start_mision {
+  align-items: center;
+  background-image: url(https://images.unsplash.com/photo-1508163834378-c10174deaf8e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1973&q=80);
+  background-position: 10% 30%;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  min-height: 100vh;
+  object-fit: cover; }
+  .section-start_mision .start-h2 {
+    max-width: 20ch; }
+  .section-start_mision .start-body {
+    max-width: 55ch; }
+
+.section-end_mision {
+  align-items: center;
+  background-image: url(https://images.unsplash.com/photo-1417816491410-d61e1546e539?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1974&q=80);
+  background-position: 50% 100%;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  min-height: 100vh;
+  object-fit: cover; }
+  .section-end_mision .end-h2 {
+    max-width: 20ch; }
+  .section-end_mision .end-body {
+    max-width: 55ch; }
