--- a/css/style.css
+++ b/css/style.css
@@ -817,39 +817,35 @@ nav {
   margin: 5% 0 5% 0; }
   .section-servicios .servicios-h2 {
     text-align: center; }
+  .section-servicios .servicios-card_item {
+    display: flex;
+    flex-direction: row;
+    height: 100%;
+    justify-content: space-between;
+    padding-bottom: 30px;
+    width: 100%; }
+    .section-servicios .servicios-card_item .servicios-card_text {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      padding: 35px 35px 35px 85px;
+      width: 100%; }
+    .section-servicios .servicios-card_item .servicios-img {
+      height: auto;
+      width: 615px; }
 
-.servicios-card_item {
-  display: flex;
-  flex-direction: row;
-  height: 100%;
-  justify-content: space-between;
-  padding-bottom: 30px;
-  width: 100%; }
-
-.servicios-card_text {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  padding: 35px 35px 35px 85px;
-  width: 100%; }
-
-.servicios-img {
-  height: auto;
-  width: 615px; }
-
-/* Mobile lanscape breakpoint */
 @media screen and (max-width: 767px) {
   .servicios-card_item {
     display: flex;
     flex-direction: column;
     height: auto;
     width: 100%; }
-  .servicios-card_text {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    padding: 50px 0 50px 0;
-    width: 100%; }
-  .servicios-img {
-    height: auto;
-    width: auto; } }
+    .servicios-card_item .servicios-card_text {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      padding: 50px 0 50px 0;
+      width: 100%; }
+    .servicios-card_item .servicios-img {
+      height: auto;
+      width: auto; } }
