--- a/css/style.css
+++ b/css/style.css
@@ -849,3 +849,39 @@ nav {
     .servicios-card_item .servicios-img {
       height: auto;
       width: auto; } }
+
+.section-projects {
+  margin: 5% 0 5% 0; }
+  .section-projects .projects-content_wrapper {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+    .section-projects .projects-content_wrapper .projects-h2 {
+      margin-bottom: 80px;
+      text-align: center; }
+    .section-projects .projects-content_wrapper .gallery-content_wrapper {
+      display: grid;
+      grid-column-gap: 30px;
+      grid-row-gap: 30px;
+      grid-template-columns: repeat(3, 1fr); }
+      .section-projects .projects-content_wrapper .gallery-content_wrapper .gallery-img {
+        border-radius: 50px;
+        height: 318px;
+        object-fit: cover;
+        overflow: hidden;
+        width: 285px; }
+
+@media screen and (max-width: 991px) {
+  .gallery-content_wrapper {
+    display: grid;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+    grid-template-columns: repeat(2, 1fr); } }
+
+@media screen and (max-width: 767px) {
+  .gallery-content_wrapper {
+    display: grid;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+    grid-template-columns: repeat(1, 1fr); } }
