--- a/scss/pages/muestras/projects.scss
+++ b/scss/pages/muestras/projects.scss
@@ -27,20 +27,60 @@
 
 // Tablet breakpoint
 @media screen and (max-width: 991px) {
-    .gallery-content_wrapper {
-        display: grid;
-        grid-column-gap: 30px;
-        grid-row-gap: 30px;
-        grid-template-columns: repeat(2, 1fr);
+    .section-projects {
+        margin: 5% 0 5% 0;
+        .projects-content_wrapper {
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            .projects-h2 {
+                margin-bottom: 80px;
+                text-align: center;
+            }
+            .gallery-content_wrapper {
+                display: grid;
+                grid-column-gap: 30px;
+                grid-row-gap: 30px;
+                grid-template-columns: repeat(2, 1fr);
+                .gallery-img {
+                    border-radius: 50px;
+                    height: 318px;
+                    object-fit: cover;
+                    overflow: hidden;
+                    width: 285px;
+                }
+            }
+        }
     }
 }
 
 // Mobile lanscape breakpoint
 @media screen and (max-width: 767px) {
-    .gallery-content_wrapper {
-        display: grid;
-        grid-column-gap: 30px;
-        grid-row-gap: 30px;
-        grid-template-columns: repeat(1, 1fr);
+    .section-projects {
+        margin: 5% 0 5% 0;
+        .projects-content_wrapper {
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            .projects-h2 {
+                margin-bottom: 80px;
+                text-align: center;
+            }
+            .gallery-content_wrapper {
+                display: grid;
+                grid-column-gap: 30px;
+                grid-row-gap: 30px;
+                grid-template-columns: repeat(1, 1fr);
+                .gallery-img {
+                    border-radius: 50px;
+                    height: 318px;
+                    object-fit: cover;
+                    overflow: hidden;
+                    width: 285px;
+                }
+            }
+        }
     }
 }
