--- a/css/style.css
+++ b/css/style.css
@@ -85,7 +85,7 @@ h6 {
   font-size: 18px;
   font-weight: 400; }
 
-.button {
+.button, .cta-1, .cta-2 {
   color: #f8f8df;
   font-size: 18px;
   font-weight: 600; }
@@ -103,66 +103,52 @@ h6 {
 @media screen and (max-width: 767px) {
   /* Font system */
   h1 {
-    color: #f8f8df;
     font-size: 32px;
     font-weight: 300;
     margin: 15px 0 40px 0; }
   h2 {
-    color: #f8f8df;
     font-size: 29px;
     font-weight: 300;
     margin: 15px 0 40px 0; }
   h3 {
-    color: #f8f8df;
     font-size: 26px;
     font-weight: 400;
     margin: 15px 0 40px 0; }
   h4 {
-    color: #f8f8df;
     font-size: 23px;
     font-weight: 400;
     margin: 15px 0 40px 0; }
   h5 {
-    color: #f8f8df;
     font-size: 20px;
     font-weight: 600;
     margin: 15px 0 40px 0; }
   .false-h5 {
-    color: #f8f8df;
     font-size: 20px;
     font-weight: 600;
     margin: 15px 0 40px 0; }
   h6 {
-    color: #f8f8df;
     font-size: 18px;
     font-weight: 700;
     margin: 15px 0 40px 0; }
   .subtitle1 {
-    color: #f8f8df;
     font-size: 16px;
     font-weight: 600; }
   .body1 {
-    color: #918e7e;
     font-size: 16px;
     font-weight: 400; }
   .subtitle2 {
-    color: #f8f8df;
     font-size: 14px;
     font-weight: 600; }
   .body2 {
-    color: #918e7e;
     font-size: 14px;
     font-weight: 400; }
-  .button {
-    color: #f8f8df;
+  .button, .cta-1, .cta-2 {
     font-size: 14px;
     font-weight: 600; }
   .caption {
-    color: #f8f8df;
     font-size: 13px;
     font-weight: 400; }
   .overline {
-    color: #f8f8df;
     font-size: 11px;
     font-weight: 400; } }
 
@@ -712,7 +698,7 @@ nav {
         justify-content: center; }
         .section-review .review-content_wrapper .review-card_wrapper .review-card_item {
           align-items: stretch;
-          background-color: var(--bg-color-alternative);
+          background-color: #524c44;
           border-radius: 40px;
           display: flex;
           flex-direction: column;
